Update azure-pipelines-backend.yml for Azure Pipelines

--- a/azure-pipelines-backend.yml
+++ b/azure-pipelines-backend.yml
@@ -98,25 +98,42 @@ steps:
       S3_SECRET_ACCESS_KEY: $(S3_SECRET_ACCESS_KEY)
 
   - script: |
-      set -e
+      set -euo pipefail
 
-      docker exec "genassist-app-cicd" pip install coverage pytest-cov pytest-azurepipelines
+      OUT_DIR="$(System.DefaultWorkingDirectory)"
+
+      echo "installing pytest and coverage libs to app"
+      docker exec "genassist-app-cicd" pip install -q coverage pytest-cov pytest-azurepipelines
+
+      echo "waiting 5 sec.."
       sleep 5
 
+      echo "📝 Following container logs..."
       docker logs --since 5s -f "genassist-app-cicd" &
       LOG_PID=$!
 
-      if ! docker exec "genassist-app-cicd" python -m pytest tests -vvv --cov=app --cov-branch --cov-report xml --junitxml="test-results.xml" --cov-report=html; then
+      echo "📊 Running pytest..."
+      if ! docker exec "genassist-app-cicd" python -m pytest tests -vvv \
+        --cov=app --cov-branch --cov-report xml \
+        --junitxml="test-results.xml" --cov-report=html \
+        --no-coverage-upload -s -o log_cli=true -o log_cli_level=DEBUG; then
+        echo "❌ Tests failed"
         TEST_RESULT=1
       else
+        echo "✅ Tests passed successfully!"
         TEST_RESULT=0
       fi
 
-      docker cp "genassist-app-cicd":/src/coverage.xml .
-      docker cp "genassist-app-cicd":/src/test-results.xml .
-      docker cp "genassist-app-cicd":/src/htmlcov ./htmlcov
+      echo "Copying test outputs to: $OUT_DIR"
+      docker cp "genassist-app-cicd":/src/test-results.xml "$OUT_DIR/test-results.xml"
+      docker cp "genassist-app-cicd":/src/coverage.xml "$OUT_DIR/coverage.xml"
+      docker cp "genassist-app-cicd":/src/htmlcov "$OUT_DIR/htmlcov"
 
-      kill $LOG_PID || true
+      kill $LOG_PID 2>/dev/null || true
+
+      echo "Files in $OUT_DIR:"
+      ls -lah "$OUT_DIR" | sed -n '1,200p'
+
       exit $TEST_RESULT
     displayName: 'Start Tests'
     timeoutInMinutes: 3
